Completed work for images and corrected some of the issues with spacing inbetween them.

--- a/angular-app/src/app/components/app-home/app-home.component.css
+++ b/angular-app/src/app/components/app-home/app-home.component.css
@@ -198,7 +198,7 @@
 }
 .about-container {
   text-align: center;
-  padding: 2.5em;
+  padding: 2.5em 2.5em 0em 2.5em ;
 }
 
 .row {
